feat: exposing rest endpoint to add products
